do some changes
add pageDB、pageruser，modify PageBase
change the position of dbml file
insert button click event

--- a/prepare for wedding/Web.config
+++ b/prepare for wedding/Web.config
@@ -11,6 +11,8 @@
             providerName="System.Data.SqlClient" />
         <add name="prepare_for_weddingConnectionString1" connectionString="Data Source=.;Initial Catalog=&quot;prepare for wedding&quot;;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="prepare_for_weddingConnectionString2" connectionString="Data Source=.;Initial Catalog=&quot;prepare for wedding&quot;;Persist Security Info=True;User ID=weddinguser;Password=aaaaaa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
